event search by title or description
